[mz-93] adjusted sprout banner and added fixed height to paragraphs to align read-more.

--- a/wp-content/themes/makeblog/less/make/style.less
+++ b/wp-content/themes/makeblog/less/make/style.less
@@ -3485,6 +3485,7 @@ Sprout by HP
 .sprout-story p {
   margin-left: 20px;
   font-size: .8em;
+  height: 45px;
 }
 .sprout-story .dom-rm-featured {
   border-top: 1px solid #dbdbdb;
